refactoring the SASS files to break them apart and make it easier to maintain

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -236,6 +236,8 @@ cas.dashboard.action.button.shutdown=Shutdown
 cas.dashboard.action.button.shutdown.modal.title=Shutdown Server
 cas.dashboard.action.button.shutdown.modal.message=The server will shut down. You will need to manually restart it.
 
+cas.dashboard.tooltip.autoconfiguration=This is a sample tooltip
+
 #####################################################################
 # Login View
 #####################################################################
