--- a/cas-management-webapp/src/main/resources/messages.properties
+++ b/cas-management-webapp/src/main/resources/messages.properties
@@ -97,6 +97,7 @@ services.form.label.sas.requiredAttr=Required Attributes
 services.form.label.sas.starttime=Starting Date/Time
 services.form.label.sas.endtime=Ending Date/Time
 services.form.label.sas.unauthorizedredirecturl=Unauthorized Redirect Url
+services.form.label.sas.remoteUrl=Remote Url
 services.form.label.sas.caseinsensitive=Case Insensitive
 services.form.label.sas.rejectedattributes=Rejected Attributes
 services.form.label.sas.rejectedattributes.name='Name'
@@ -186,7 +187,8 @@ services.form.tooltip.sas.casEnabled=Decides whether access to this service is a
 services.form.tooltip.sas.ssoEnabled=Decides whether this service is allowed to participate in SSO.
 services.form.tooltip.sas.requireAll=Decides whether all attributes AND corresponding values should be evaluated before access can be granted. If left unchecked, the first successful match on attribute name and value will allow access.
 services.form.tooltip.sas.requiredAttr=These are a set of attributes along with their values that decide whether access to this service can be granted. To configure, only provide values for attributes you care about, and leave the rest blank.
-services.form.tooltip.sas.unauthorizedredirecturl=URL to which CAS should direct in the event that service access is defnied.
+services.form.tooltip.sas.unauthorizedredirecturl=URL to which CAS should direct in the event that service access is defined.
+services.form.tooltip.sas.remoteUrl=URL that CAS should contact to determine if access to this service should be granted.
 services.form.tooltip.sas.caseinsensitive=Indicates whether matching on required attribute values should be done in a case-insensitive manner.
 services.form.tooltip.sas.rejectedattributes=A Map of rejected principal attribute names along with the set of values for each attribute. These attributes MUST NOT be available to the authenticated Principal so that access may be granted. If none is defined, the check is entirely ignored.
 services.form.tooltip.sas.selecttype=Access strategy type
