--- a/cas-management-webapp/src/main/resources/messages.properties
+++ b/cas-management-webapp/src/main/resources/messages.properties
@@ -119,6 +119,9 @@ services.form.label.saml.signassertions=Sign Assertions
 services.form.label.saml.signresponses=Sign Responses
 services.form.label.saml.encryptassertions=Encrypt Assertions
 
+services.form.label.oidc.signToken=Sign ID Token
+services.form.label.oidc.jwks=JSON Web Keystore
+
 services.form.header.page.addService=Add Service
 services.form.header.page.editService=Edit Service
 services.form.header.oauthOptions=OAuth Client Options Only
@@ -210,6 +213,9 @@ services.form.tooltip.saml.metadata.signaturepublickeylocation=Location of the m
 services.form.tooltip.saml.signassertions=Sign Assertions
 services.form.tooltip.saml.signresponses=Sign Responses
 services.form.tooltip.saml.encryptassertions=Encrypt Assertions
+
+services.form.tooltip.oidc.signToken=Whether ID tokens should be signed.
+services.form.tooltip.oidc.jwks=Location of the JSON web keystore to sign id tokens with. 
 
 services.form.tooltip.attrRelease.principleAttRepo.cached.mergeStrategy=Decides how attributes that are retrieved from the cache \
   should be merged into the existing attribute repopository. Attributes may be replaced, ignored or contain multiple \
