--- a/cas-management-webapp/src/main/resources/messages.properties
+++ b/cas-management-webapp/src/main/resources/messages.properties
@@ -90,6 +90,7 @@ services.form.label.attrRelease.policies.returnAllowed=Return Allowed
 services.form.label.attrRelease.policies.returnMapped=Return Mapped
 services.form.label.attrRelease.policies.sourceAttribute=Source Attribute
 services.form.label.attrRelease.policies.casAttribute=CAS Attribute
+services.form.label.sas.authorizedCodes=Acceptable HTTP Codes
 services.form.label.sas.casEnabled=Enable Service
 services.form.label.sas.ssoEnabled=Allow Single Sign-On
 services.form.label.sas.requireAll=Require All Attributes
@@ -97,6 +98,7 @@ services.form.label.sas.requiredAttr=Required Attributes
 services.form.label.sas.starttime=Starting Date/Time
 services.form.label.sas.endtime=Ending Date/Time
 services.form.label.sas.unauthorizedredirecturl=Unauthorized Redirect Url
+services.form.label.sas.remoteUrl=Remote Url
 services.form.label.sas.caseinsensitive=Case Insensitive
 services.form.label.sas.rejectedattributes=Rejected Attributes
 services.form.label.sas.rejectedattributes.name='Name'
@@ -112,10 +114,13 @@ services.form.label.saml.header=SAML Client
 services.form.label.saml.metadata.location=Metadata Location
 services.form.label.saml.metadata.maximumvalidity=Metadata Maximum Validity
 services.form.label.saml.authenticationcontextclass=Authentication Context Class
-services.form.label.saml.metadata.signaturepublickeylocation=Metadata Signature Public Key Location
+services.form.label.saml.metadata.signaturepublickeylocation=Metadata Public Key Location
 services.form.label.saml.signassertions=Sign Assertions
 services.form.label.saml.signresponses=Sign Responses
 services.form.label.saml.encryptassertions=Encrypt Assertions
+
+services.form.label.oidc.signToken=Sign ID Token
+services.form.label.oidc.jwks=JSON Web Keystore
 
 services.form.header.page.addService=Add Service
 services.form.header.page.editService=Edit Service
@@ -186,10 +191,12 @@ services.form.tooltip.sas.casEnabled=Decides whether access to this service is a
 services.form.tooltip.sas.ssoEnabled=Decides whether this service is allowed to participate in SSO.
 services.form.tooltip.sas.requireAll=Decides whether all attributes AND corresponding values should be evaluated before access can be granted. If left unchecked, the first successful match on attribute name and value will allow access.
 services.form.tooltip.sas.requiredAttr=These are a set of attributes along with their values that decide whether access to this service can be granted. To configure, only provide values for attributes you care about, and leave the rest blank.
-services.form.tooltip.sas.unauthorizedredirecturl=URL to which CAS should direct in the event that service access is defnied.
+services.form.tooltip.sas.unauthorizedredirecturl=URL to which CAS should direct in the event that service access is defined.
+services.form.tooltip.sas.remoteUrl=URL that CAS should contact to determine if access to this service should be granted.
 services.form.tooltip.sas.caseinsensitive=Indicates whether matching on required attribute values should be done in a case-insensitive manner.
 services.form.tooltip.sas.rejectedattributes=A Map of rejected principal attribute names along with the set of values for each attribute. These attributes MUST NOT be available to the authenticated Principal so that access may be granted. If none is defined, the check is entirely ignored.
 services.form.tooltip.sas.selecttype=Access strategy type
+services.form.tooltip.sas.authorizedCodes=Acceptable HTTP codes before granting access to this service.
 services.form.tooltip.sas.grouper=This access strategy attempts to locate Grouper groups for the CAS principal. The groups returned by Grouper are collected as CAS attribtues and examined against the list of required attributes for service access.
 services.form.tooltip.multiauth.providers=List of multifactor provider ids to assign to this service.
 services.form.tooltip.multiauth.failuremode=Decide what CAS should do in the event that a provider is not available.
@@ -197,13 +204,18 @@ services.form.tooltip.multiauth.principalattribute.nametrigger=Principal attribu
 services.form.tooltip.multiauth.principalattribute.valuetomatch=Principal attribute value to match in order to trigger MFA when accessing this service.
 
 services.form.tooltip.saml.header=SAML Client
-services.form.tooltip.saml.metadata.location=Metadata Location
-services.form.tooltip.saml.metadata.maximumvalidity=Metadata Maximum Validity
-services.form.tooltip.saml.authenticationcontextclass=Authentication Context Class
-services.form.tooltip.saml.metadata.signaturepublickeylocation=Metadata Signature Public Key Location
+services.form.tooltip.saml.metadata.location=Metadata location for this paticular service provider.
+services.form.tooltip.saml.metadata.maximumvalidity=Indicates how long should metadata be considered valid.
+services.form.tooltip.saml.authenticationcontextclass=The authentication context class that may be passed to the service provider. If \
+  none is defined here forcefully, metadata will be consulted instead.
+services.form.tooltip.saml.metadata.signaturepublickeylocation=Location of the metadata signing public key so its authenticity can be \
+  verified.
 services.form.tooltip.saml.signassertions=Sign Assertions
 services.form.tooltip.saml.signresponses=Sign Responses
 services.form.tooltip.saml.encryptassertions=Encrypt Assertions
+
+services.form.tooltip.oidc.signToken=Whether ID tokens should be signed.
+services.form.tooltip.oidc.jwks=Location of the JSON web keystore to sign id tokens with. 
 
 services.form.tooltip.attrRelease.principleAttRepo.cached.mergeStrategy=Decides how attributes that are retrieved from the cache \
   should be merged into the existing attribute repopository. Attributes may be replaced, ignored or contain multiple \
