--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -105,6 +105,8 @@ screen.mustchangepass.heading=You must change your password.
 screen.mustchangepass.message=Please <a href="{0}">change your password</a>.
 screen.badhours.heading=Your account is forbidden to login at this time.
 screen.badhours.message=Please try again later.
+screen.authnblocked.heading=Authentication attempt is blocked.
+screen.authnblocked.message=Your authentication attempt is untrusted and unauthorized from your current workstation.
 screen.badworkstation.heading=You cannot login from this workstation.
 screen.badworkstation.message=Please contact the system administrator to regain access.
 
