Updated logs and UI

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 screen.welcome.welcome=Congratulations on bringing CAS online!  To learn how to authenticate, please review the default authentication handler configuration.
-screen.welcome.security=For security reasons, please Log Out and Exit your web browser when you are done accessing services that require authentication!
+screen.welcome.security=For security reasons, please <a href="logout">log out</a> and exit your web browser when you are done accessing \
+  services that require authentication!
 screen.welcome.instructions=Enter your Username and Password
 screen.welcome.label.netid=<span class="accesskey">U</span>sername:
 screen.welcome.label.netid.accesskey=u
@@ -251,7 +252,7 @@ cas.dashboard.tooltip.autoconfiguration=This is a sample tooltip
 #Resources Labels
 cas.login.pagetitle=Login
 cas.login.resources.header=Links to CAS Resources
-cas.login.resources.wiki=Wiki
+cas.login.resources.wiki=Documentation
 cas.login.resources.issuetracker=Issue Tracker
 cas.login.resources.mailinglist=Mailing Lists
 
