--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -58,8 +58,8 @@ screen.logout.redirect=The service from which you arrived has supplied a <a href
 screen.service.sso.error.header=Re-Authentication Required to Access this Service
 screen.service.sso.error.message=You attempted to access a service that requires authentication without re-authenticating.  Please try authenticating again</a>.
 screen.service.required.message=You attempted authentication without specifying the target application. Please re-examine the request and try again.
-
-
+        
+captchaError=reCAPTCHA validation failed.
 username.required=Username is a required field.
 password.required=Password is a required field.
 
