--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -101,9 +101,9 @@ screen.accountdisabled.message=Please contact the system administrator to regain
 screen.accountlocked.heading=This account has been locked.
 screen.accountlocked.message=Please contact the system administrator to regain access.
 screen.expiredpass.heading=Your password has expired.
-screen.expiredpass.message=Please <a href="{0}">change your password</a>.
+screen.expiredpass.message=Please <a href="https://changepsw.exampple.org">change your password</a>.
 screen.mustchangepass.heading=You must change your password.
-screen.mustchangepass.message=Please <a href="{0}">change your password</a>.
+screen.mustchangepass.message=Please <a href="https://changepsw.exampple.org">change your password</a>.
 screen.badhours.heading=Your account is forbidden to login at this time.
 screen.badhours.message=Please try again later.
 screen.authnblocked.heading=Authentication attempt is blocked.
