--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -17,6 +17,9 @@ screen.welcome.label.loginwith=Or login with:
 screen.cookies.disabled.title=Browser cookies disabled
 screen.cookies.disabled.message=Your browser does not accept cookies. Single Sign On WILL NOT WORK.
 
+screen.pm.button.submit=SUBMIT
+screen.pm.button.cancel=CANCEL
+
 screen.aup.button.accept=ACCEPT
 screen.aup.button.cancel=CANCEL
 
