--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -66,6 +66,11 @@ captchaError=reCAPTCHA validation failed.
 username.required=Username is a required field.
 password.required=Password is a required field.
 
+# Password Management
+confirmedPassword.required=Password must be confirmed.
+pm.passwordsMustMatch=Provided passwords do not match.
+pm.passwordFailedCriteria=Provided password does not satisfy the password security policy. Please try again.
+
 # Authentication failure messages
 authenticationFailure.AccountDisabledException=This account has been disabled.
 authenticationFailure.AccountLockedException=This account has been locked.
@@ -74,6 +79,7 @@ authenticationFailure.InvalidLoginLocationException=You cannot login from this w
 authenticationFailure.InvalidLoginTimeException=Your account is forbidden to login at this time.
 authenticationFailure.AccountNotFoundException=Invalid credentials.
 authenticationFailure.FailedLoginException=Invalid credentials.
+authenticationFailure.AccountPasswordMustChangeException=Your account password has expired and must be changed.
 authenticationFailure.UnauthorizedServiceForPrincipalException=Service access denied due to missing privileges.
 authenticationFailure.UNKNOWN=Invalid credentials.
 
