updated LDAP support

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -70,6 +70,7 @@ password.required=Password is a required field.
 confirmedPassword.required=Password must be confirmed.
 pm.passwordsMustMatch=Provided passwords do not match.
 pm.passwordFailedCriteria=Provided password does not satisfy the password security policy. Please try again.
+pm.updateFailure=Account password could not be modified. Please try again.
 
 # Authentication failure messages
 authenticationFailure.AccountDisabledException=This account has been disabled.
