updated LDAP support

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -121,6 +121,9 @@ screen.authnblocked.message=Your authentication attempt is untrusted and unautho
 screen.badworkstation.heading=You cannot login from this workstation.
 screen.badworkstation.message=Please contact the system administrator to regain access.
 
+screen.pm.success.header=Password Change Successful
+screen.pm.success.message=Your account password is successfully updated.
+
 # GAuth
 screen.authentication.gauth.register=Your account is not registered. Use the below settings to register your device with CAS.
 screen.authentication.gauth.key=Secret key to register is {0}
