Working on UI updates with SLO

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -55,6 +55,10 @@ screen.success.security=When you are finished, for security reasons, please Log 
 #Logout Screen Messages
 screen.logout.header=Logout successful
 screen.logout.success=You have successfully logged out of the Central Authentication Service.
+screen.logout.fc.success=You have successfully logged out of the Central Authentication Service. Given single logout is enabled with CAS, \
+  the following list of applications are <strong> only notified</strong> to log you out and destroy your user session. Remember that this \
+  is just a notification, not a guarantee. It is up the application itself to honor these notifications and properly take action to log you \
+  out.
 screen.logout.security=For security reasons, exit your web browser.
 screen.logout.redirect=The service from which you arrived has supplied a <a href="{0}">link you may follow by clicking here</a>.
 
