--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -19,7 +19,7 @@ screen.cookies.disabled.message=Your browser does not accept cookies. Single Sig
 
 screen.pm.button.submit=SUBMIT
 screen.pm.button.cancel=CANCEL
-screen.pm.button.forgotpwd=Forgot your password?
+screen.pm.button.forgotpwd=<a href="https://pwd.example.org">Forgot your password? </a>
 screen.aup.button.accept=ACCEPT
 screen.aup.button.cancel=CANCEL
 
