Handle button event after login

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -10,6 +10,7 @@ screen.welcome.label.publicstation=I am at a public workstation.
 screen.welcome.label.warn=<span class="accesskey">W</span>arn me before logging me into other sites.
 screen.welcome.label.warn.accesskey=w
 screen.welcome.button.login=LOGIN
+screen.welcome.button.loginwip=One moment please...
 screen.welcome.button.register=REGISTER
 screen.welcome.button.clear=CLEAR
 screen.welcome.label.loginwith=Or login with:
