--- a/cas-management-webapp/src/main/resources/messages.properties
+++ b/cas-management-webapp/src/main/resources/messages.properties
@@ -85,6 +85,7 @@ services.form.label.attrRelease.principleAttRepo.cached=Cached
 services.form.label.attrRelease.principleAttRepo.cached.timeUnit=Time Unit
 services.form.label.attrRelease.principleAttRepo.cached.expiration=Expiration
 services.form.label.attrRelease.principleAttRepo.cached.mergeStrategy=Merging Strategy
+services.form.label.attrRelease.policies.denyAll=Deny All
 services.form.label.attrRelease.policies.returnAll=Return All
 services.form.label.attrRelease.policies.returnAllowed=Return Allowed
 services.form.label.attrRelease.policies.returnMapped=Return Mapped
