Updated mgmt appUpdated docs

--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -328,3 +328,8 @@ cas.mfa.googleauth.pagetitle=Google Authenticator
 cas.mfa.radius.pagetitle=Radius Authentication
 cas.mfa.yubikey.pagetitle=YubiKey Authentication
 cas.mfa.authy.pagetitle=Authy Login
+
+cas.mfa.registerdevice.label.intro=Please register the current device.
+cas.mfa.registerdevice.pagetitle=Register Device
+cas.mfa.registerdevice.label.name=Name
+cas.mfa.registerdevice.button.register=Register
