--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -329,7 +329,8 @@ cas.mfa.radius.pagetitle=Radius Authentication
 cas.mfa.yubikey.pagetitle=YubiKey Authentication
 cas.mfa.authy.pagetitle=Authy Login
 
-cas.mfa.registerdevice.label.intro=Please register the current device.
+cas.mfa.registerdevice.label.title=Register Device
+cas.mfa.registerdevice.label.intro=Please name the current device. 
 cas.mfa.registerdevice.pagetitle=Register Device
 cas.mfa.registerdevice.label.name=Name
 cas.mfa.registerdevice.button.register=Register
