--- a/cas-server-webapp/src/main/resources/messages.properties
+++ b/cas-server-webapp/src/main/resources/messages.properties
@@ -156,10 +156,9 @@ of the Apereo community.<br/></br>If you are having problems logging in using CA
 #####################################################################
 # No sessions found screen
 cas.ssosessions.loading=Loading SSO Sessions...
-cas.ssosessions.nosessionsfound=No Sessions Found
+cas.ssosessions.nosessionsfound=No sessions found. 
 cas.ssosessions.button.refresh=Refresh
-
-
+        
 # Report View
 cas.ssosessions.report.pagetitle=SSO Sessions Report
 cas.ssosessions.report.panel.totalactiveprincipals=Total Active Principals
