--- a/webapp-mgmt/cas-management-webapp/src/main/resources/messages.properties
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/messages.properties
@@ -198,14 +198,15 @@ services.form.tooltip.sas.caseinsensitive=Indicates whether matching on required
 services.form.tooltip.sas.rejectedattributes=A Map of rejected principal attribute names along with the set of values for each attribute. These attributes MUST NOT be available to the authenticated Principal so that access may be granted. If none is defined, the check is entirely ignored.
 services.form.tooltip.sas.selecttype=Access strategy type
 services.form.tooltip.sas.authorizedCodes=Acceptable HTTP codes before granting access to this service.
-services.form.tooltip.sas.grouper=This access strategy attempts to locate Grouper groups for the CAS principal. The groups returned by Grouper are collected as CAS attribtues and examined against the list of required attributes for service access.
+services.form.tooltip.sas.grouper=This access strategy attempts to locate Grouper groups for the CAS principal. The groups returned by \
+  Grouper are collected as CAS attributes and examined against the list of required attributes for service access.
 services.form.tooltip.multiauth.providers=List of multifactor provider ids to assign to this service.
 services.form.tooltip.multiauth.failuremode=Decide what CAS should do in the event that a provider is not available.
 services.form.tooltip.multiauth.principalattribute.nametrigger=Principal attribute name to trigger MFA when accessing this service.
 services.form.tooltip.multiauth.principalattribute.valuetomatch=Principal attribute value to match in order to trigger MFA when accessing this service.
 
 services.form.tooltip.saml.header=SAML Client
-services.form.tooltip.saml.metadata.location=Metadata location for this paticular service provider.
+services.form.tooltip.saml.metadata.location=Metadata location for this particular service provider.
 services.form.tooltip.saml.metadata.maximumvalidity=Indicates how long should metadata be considered valid.
 services.form.tooltip.saml.authenticationcontextclass=The authentication context class that may be passed to the service provider. If \
   none is defined here forcefully, metadata will be consulted instead.
@@ -219,7 +220,7 @@ services.form.tooltip.oidc.signToken=Whether ID tokens should be signed.
 services.form.tooltip.oidc.jwks=Location of the JSON web keystore to sign id tokens with. 
 
 services.form.tooltip.attrRelease.principleAttRepo.cached.mergeStrategy=Decides how attributes that are retrieved from the cache \
-  should be merged into the existing attribute repopository. Attributes may be replaced, ignored or contain multiple \
+  should be merged into the existing attribute repository. Attributes may be replaced, ignored or contain multiple \
   values as a result of the merge action.
 management.services.service.warn=CAS does not allow any applications to use SSO because no services are configured. Any application that wishes to use CAS must be registered in this tool.  That includes <strong>THIS TOOL</strong>. If you are going to use this tool, the FIRST SERVICE TO ADD IS THIS SERVICE ITSELF.  The default Service Management Tool URL is <strong>"{0}"</strong>.
 management.services.service.noAction=No further action is required.
