--- a/webapp/cas-server-webapp/src/main/resources/messages.properties
+++ b/webapp/cas-server-webapp/src/main/resources/messages.properties
@@ -51,11 +51,11 @@ screen.authentication.warning=Authentication Succeeded with Warnings
 #Generic Success Screen Messages
 screen.success.header=Log In Successful
 screen.success.success=You, <strong>{0}</strong>, have successfully logged into the Central Authentication Service.
-screen.success.security=When you are finished, for security reasons, please Log Out and Exit your web browser.
+screen.success.security=When you are finished, for security reasons, please <a href="logout">log out</a> and exit your web browser.
 
 #Logout Screen Messages
 screen.logout.header=Logout successful
-screen.logout.success=You have successfully logged out of the Central Authentication Service.
+screen.logout.success=You have successfully logged out of the Central Authentication Service. You may <a href="login">log in</a> again. 
 screen.logout.fc.success=You have successfully logged out of the Central Authentication Service. Given single logout is enabled with CAS, \
   the following list of applications are <strong> only notified</strong> to log you out and destroy your user session. Remember that this \
   is just a notification, not a guarantee. It is up the application itself to honor these notifications and properly take action to log you \
