--- a/webapp/cas-server-webapp/src/main/resources/messages.properties
+++ b/webapp/cas-server-webapp/src/main/resources/messages.properties
@@ -130,7 +130,8 @@ screen.pm.success.header=Password Change Successful
 screen.pm.success.message=Your account password is successfully updated.
 
 screen.pac4j.unauthz.pagetitle=Unauthorized Access
-screen.pac4j.unauthz.login=Login Again
+screen.pac4j.unauthz.gotoapp=Goto Application
+screen.pac4j.unauthz.login=Back to CAS
 screen.pac4j.unauthz.heading=Unauthorized Access
 screen.pac4j.unauthz.message=Either the authentication request was rejected/cancelled, or the authentication provider denied access due \
   to permissions, etc.
