--- a/webapp/cas-server-webapp/src/main/resources/messages.properties
+++ b/webapp/cas-server-webapp/src/main/resources/messages.properties
@@ -123,6 +123,8 @@ screen.badhours.heading=Your account is forbidden to login at this time.
 screen.badhours.message=Please try again later.
 screen.authnblocked.heading=Authentication attempt is blocked.
 screen.authnblocked.message=Your authentication attempt is untrusted and unauthorized from your current workstation.
+screen.risk.authnblocked.heading=Authentication attempt is blocked.
+screen.risk.authnblocked.message=Your authentication attempt is untrusted and unauthorized from your current workstation.
 screen.badworkstation.heading=You cannot login from this workstation.
 screen.badworkstation.message=Please contact the system administrator to regain access.
 
