Working on saml metadata filters

--- a/webapp-mgmt/cas-management-webapp/src/main/resources/messages.properties
+++ b/webapp-mgmt/cas-management-webapp/src/main/resources/messages.properties
@@ -119,6 +119,11 @@ services.form.label.saml.metadata.signaturepublickeylocation=Metadata Public Key
 services.form.label.saml.signassertions=Sign Assertions
 services.form.label.saml.signresponses=Sign Responses
 services.form.label.saml.encryptassertions=Encrypt Assertions
+services.form.label.saml.removeEmptyEntities=Remove Empty Entities Descriptors
+services.form.label.saml.removeRoleless=Remove Empty Roles
+services.form.label.saml.metadata.pattern=Metadata Filter Regex
+services.form.label.saml.metadata.dir=Metadata Filter Criteria
+services.form.label.saml.metadata.role=Whitelisted Metadata Roles
 
 services.form.label.oidc.signToken=Sign ID Token
 services.form.label.oidc.jwks=JSON Web Keystore
@@ -215,6 +220,11 @@ services.form.tooltip.saml.metadata.signaturepublickeylocation=Location of the m
 services.form.tooltip.saml.signassertions=Sign Assertions
 services.form.tooltip.saml.signresponses=Sign Responses
 services.form.tooltip.saml.encryptassertions=Encrypt Assertions
+services.form.tooltip.saml.removeEmptyEntities=Controls whether to keep entities descriptors that contain no entity descriptors
+services.form.tooltip.saml.removeRoleless=Controls whether to keep entity descriptors that contain no roles
+services.form.tooltip.saml.metadata.pattern=Regex applied to entity ids in a metadata aggregate
+services.form.tooltip.saml.metadata.dir=Whether to include/exclude entity ids that match the filter pattern
+services.form.tooltip.saml.metadata.role=Whitelisted roles to keep in the metadata.
 
 services.form.tooltip.oidc.signToken=Whether ID tokens should be signed.
 services.form.tooltip.oidc.jwks=Location of the JSON web keystore to sign id tokens with. 
@@ -234,3 +244,4 @@ footer.issueTracker=Issue Tracker
 footer.mailingLists=Mailing Lists
 footer.copyright=Copyright &copy; 2005 - 2015 Apereo, Inc.
 footer.poweredBy=Powered by <a href="http://www.apereo.org/cas">Apereo Central Authentication Service {0}</a>
+
