Configure warn view to show up based on presence of cas cookie

--- a/webapp/cas-server-webapp/src/main/resources/messages.properties
+++ b/webapp/cas-server-webapp/src/main/resources/messages.properties
@@ -45,7 +45,7 @@ screen.blocked.message=You've entered the wrong password for the user too many t
 AbstractAccessDecisionManager.accessDenied=You are not authorized to access this resource. Contact your CAS administrator for more info.
 
 #Confirmation Screen Messages
-screen.confirmation.message=Proceed to the application.
+screen.confirmation.message=You asked to be warned before logging into applications. Please proceed.
 screen.authentication.warning=Authentication Succeeded with Warnings
 
 #Generic Success Screen Messages
