--- a/webapp/cas-server-webapp/src/main/resources/messages.properties
+++ b/webapp/cas-server-webapp/src/main/resources/messages.properties
@@ -7,8 +7,9 @@ screen.welcome.label.netid.accesskey=u
 screen.welcome.label.password=<span class="accesskey">P</span>assword:
 screen.welcome.label.password.accesskey=p
 screen.welcome.label.publicstation=I am at a public workstation.
-screen.welcome.label.warn=<span class="accesskey">W</span>arn me before logging me into other sites.
+screen.welcome.label.warn=<span class="accesskey">W</span>arn me!
 screen.welcome.label.warn.accesskey=w
+screen.welcome.label.warnremove=Do not warn me again
 screen.welcome.button.login=LOGIN
 screen.welcome.button.loginwip=One moment please...
 screen.welcome.button.register=REGISTER
